test/corpus/class_guard.txt
==================
Class guard
==================

bundle agent my_bundle {
  reports:
    any::
      "Hello World!";
}

---

(source_file
  (block
    (bundle
      bundle_type: (identifier)
      bundle_id: (identifier)
      (bundle_body
        (bundle_statement
          (promise_guard)
          (promise_line
            (class_guard)
            promiser: (quoted_string)))))))
