test/corpus/promise_line.txt
==================
Promise line
==================

bundle agent my_bundle {
  reports:
      "Hello World!";
}

---

(source_file
  (block
    (bundle
      (bundle_type)
      (bundle_id)
      (bundle_body
        (bundle_statement
          (promise_guard)
          (promise_line
            (promiser)))))))
