test/corpus/quoted_promisee.txt
==================
Quoted string as promisee
==================

bundle agent my_bundle {
  reports:
      "promiser" -> "promisee";
}

---

(source_file
  (block
    (bundle
      bundle_type: (identifier)
      bundle_id: (identifier)
      (bundle_body
        (bundle_statement
          (promise_guard)
          (promise_line
            promiser: (quoted_string)
            promisee: (right_value
              (quoted_string))))))))
